# excerpt

./: CMakeLists.txt  README.md  excerpt.cpp  excerpt.h
.github/workflows/: cmake.yml
example/: CMakeLists.txt  test.cpp
example/src/: CMakeLists.txt  test.cpp
excerpt/inc/: excerpt.h
excerpt/src/: CMakeLists.txt  excerpt.cpp
excerptlib/inc/: excerpt.h
excerptlib/src/: CMakeLists.txt
include/: excerpt.h
lib/: .gitignore
src/example/: test.cpp
src/excerpt/: excerpt.cpp
